Add read more/less btn effect

--- a/index.html
+++ b/index.html
@@ -58,66 +58,68 @@
 
     <section id="about" class=" about">
         <!--div class="container"-->
-            <div class="about-box">
-                <h2>O mnie</h2>
-                <div class="picture">
-                    <img src="images/about_me/mojePhoto.JPG">
-                </div>
-                <div class="about-text">
-                    <p>Nazywam się
-                        <strong>Katarzyna&nbsp;Trześniewska</strong>. Z wykształcenia ekonomistka, z zamiłowania
-                        <strong>Front-end&nbsp;Developer</strong>. Zafascynowana możliwościami
-                        <strong>wizualnymi</strong> aktualnych
-                        <strong>technologii webowych</strong>. Amatorka biegów narciarskich oraz miłośniczka
-                        <strong>gier planszowych</strong>.</p>
-                    <p>Ciągły
-                        <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma,
-                        że przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną
-                        <strong>motywację do działania</strong>.</p>
-                    <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę jako
-                        <strong>Junior Front-end Developer</strong>.
-                    </p>
-                </div>
-                <div class="about-text not-visible">
-                    <br>
-                    <p>Rok temu podjęłam decyzję o zmianie ścieżki rozwoju zawodowego w stronę
-                        <strong>IT</strong>. Zdecydowałam się pójść w kierunku
-                        <strong>Front-end</strong>, ponieważ jestem wrażliwa na
-                        <strong>estetykę</strong> oraz
-                        <strong>formę graficzną</strong> prezentowanych w sieci treści. Lubię również rozwijać
-                        <strong>wizualne</strong> efekty swoich projektów.</p>
-                    <p>W maju tego roku ukończyłam intensywny
-                        <strong>bootcamp ‘Front-end Developer’</strong> w Kodilli. Trzymiesięczny kurs dał mi solidne podstawy oraz
-                        pozwolił poznać
-                        <strong>aktualnie</strong> stosowane
-                        <strong>technologie webowe</strong>. Najlepiej odnajduję się w języku
-                        <strong>CSS3</strong>, który w połączeniu z
-                        <strong>SASS</strong> oferuje ogromne możliwości tworzenia stylów oraz animacji. Poznanie
-                        <strong>JavaScript</strong> oraz
-                        <strong>jQuery</strong> otworzyło przed mną świat
-                        <strong>języków skryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go coraz bardziej zgłębiać.
-                        Aktualnie poznaję i wprowadzam do projektów
-                        <strong>AngularJS</strong>.</p>
-                    <p> Moje
-                        <strong>środowisko developerskie</strong> to aktualnie:
-                        <strong>Visual Studio Code</strong> (pracowałam również na SublimeText3); system kontroli wersji
-                        <strong>Git</strong>;
-                        <strong>NPM</strong>: task runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
-                        SASS na CSS oraz dodanie niezbędnych prefixów.</p>
-                    <p>
-                        <strong>Programowanie</strong> stało się jedną z moich pasji. Tworzenie
-                        <strong>aplikacji webowych</strong> i nadawanie im piękna oraz możliwości
-                        <strong>interakcji</strong> z użytkownikiem sprawia mi dużo radości. Zawsze
-                        <strong>szukam rozwiązań</strong> napotkanych problemów, dzięki czemu odkrywam całkiem nowe możliwości i
-                        to daje największą mi
-                        <strong>satysfakcję</strong>.</p>
-                    <p>Ponieżej zaprezentowałam swoje dotychczasowe
-                        <strong>projekty</strong>, które w dalszym ciągu
-                        <strong>rozwijam</strong> i 
-                        <strong>doskonalę</strong>. Zachęcam do ich przejżenia. Jęśli masz jakieś uwagi <strong>skontaktuj</strong> się ze mną!</p>
-                </div>
-                <button id="read_more">Czytaj więcej</button>
+        <div class="about-box">
+            <h2>O mnie</h2>
+            <div class="picture">
+                <img src="images/about_me/mojePhoto.JPG">
             </div>
+            <div class="about-text">
+                <p>Nazywam się
+                    <strong>Katarzyna&nbsp;Trześniewska</strong>. Z wykształcenia ekonomistka, z zamiłowania
+                    <strong>Front-end&nbsp;Developer</strong>. Zafascynowana możliwościami
+                    <strong>wizualnymi</strong> aktualnych
+                    <strong>technologii webowych</strong>. Amatorka biegów narciarskich oraz miłośniczka
+                    <strong>gier planszowych</strong>.</p>
+                <p>Ciągły
+                    <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma,
+                    że przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną
+                    <strong>motywację do działania</strong>.</p>
+                <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę jako
+                    <strong>Junior Front-end Developer</strong>.
+                </p>
+            </div>
+            <div class="about-text not-visible">
+                <br>
+                <p>Rok temu podjęłam decyzję o zmianie ścieżki rozwoju zawodowego w stronę
+                    <strong>IT</strong>. Zdecydowałam się pójść w kierunku
+                    <strong>Front-end</strong>, ponieważ jestem wrażliwa na
+                    <strong>estetykę</strong> oraz
+                    <strong>formę graficzną</strong> prezentowanych w sieci treści. Lubię również rozwijać
+                    <strong>wizualne</strong> efekty swoich projektów.</p>
+                <p>W maju tego roku ukończyłam intensywny
+                    <strong>bootcamp ‘Front-end Developer’</strong> w Kodilli. Trzymiesięczny kurs dał mi solidne podstawy oraz pozwolił
+                    poznać
+                    <strong>aktualnie</strong> stosowane
+                    <strong>technologie webowe</strong>. Najlepiej odnajduję się w języku
+                    <strong>CSS3</strong>, który w połączeniu z
+                    <strong>SASS</strong> oferuje ogromne możliwości tworzenia stylów oraz animacji. Poznanie
+                    <strong>JavaScript</strong> oraz
+                    <strong>jQuery</strong> otworzyło przed mną świat
+                    <strong>języków skryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go coraz bardziej zgłębiać.
+                    Aktualnie poznaję i wprowadzam do projektów
+                    <strong>AngularJS</strong>.</p>
+                <p> Moje
+                    <strong>środowisko developerskie</strong> to aktualnie:
+                    <strong>Visual Studio Code</strong> (pracowałam również na SublimeText3); system kontroli wersji
+                    <strong>Git</strong>;
+                    <strong>NPM</strong>: task runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
+                    SASS na CSS oraz dodanie niezbędnych prefixów.</p>
+                <p>
+                    <strong>Programowanie</strong> stało się jedną z moich pasji. Tworzenie
+                    <strong>aplikacji webowych</strong> i nadawanie im piękna oraz możliwości
+                    <strong>interakcji</strong> z użytkownikiem sprawia mi dużo radości. Zawsze
+                    <strong>szukam rozwiązań</strong> napotkanych problemów, dzięki czemu odkrywam całkiem nowe możliwości i to daje
+                    największą mi
+                    <strong>satysfakcję</strong>.</p>
+                <p>Ponieżej zaprezentowałam swoje dotychczasowe
+                    <strong>projekty</strong>, które w dalszym ciągu
+                    <strong>rozwijam</strong> i
+                    <strong>doskonalę</strong>. Zachęcam do ich przejżenia. Jęśli masz jakieś uwagi
+                    <strong>skontaktuj</strong> się ze mną!</p>
+            </div>
+            <button id="read_more">Czytaj więcej</button>
+            <button id="read_less">Czytaj mniej</button>
+        </div>
         <!--/div-->
     </section>
 
@@ -194,7 +196,7 @@
                                 HTML i CSS szablon przy użyciu Sass, Bootstrap, JS oraz jQuery. Wykorzystane możliwości Sass
                                 to: variables, nesting oraz mixins. Carousel oraz Grid z Bootstrapa. JS oraz jQuery pozwoliły
                                 uzyskać interaktywność wybranych przycisków oraz animacji ikon. Responsywność strony uzyskana
-                                dzięki Bootstrap Grid oraz Media querre. Projekt wykonany z kontrolą wersji Git. </p>
+                                dzięki Bootstrap Grid oraz Media queries. Projekt wykonany z kontrolą wersji Git. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -215,7 +217,7 @@
                     </div>
                 </div>
                 <div class="project-3">
-                    <img src="images/projects/BookingForm1.png"> 
+                    <img src="images/projects/BookingForm1.png">
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
@@ -246,8 +248,8 @@
                         <div class="description">
                             <h4>Gra w Marynarza</h4>
                             <p>Aplikacja do gry w popularnego Marynarza. Aplikacja napisana w ramach bootcampu z wykorzystaniem
-                                Bootstrapa oraz JavaScript. Projekt pozwolił mi przećwiczyć tworzenie zmiennych, instrukcji warunkowych
-                                if, swich oraz definiowanie funkcji a także manipulację elementami DOM. </p>
+                                Bootstrapa oraz JavaScript. Projekt pozwolił mi przećwiczyć tworzenie zmiennych, instrukcji
+                                warunkowych if, swich oraz definiowanie funkcji a także manipulację elementami DOM. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -289,6 +291,7 @@
                             <button class="icon-link">
                                 <i class="fa fa-code"></i>
                             </button>
+                        </a>
                     </div>
                     <div class="project-6"></div>
                 </div>
@@ -341,7 +344,7 @@
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
 
     <!-- Scroll Magic plugin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 
     <!-- ======= JavaScript ====== -->
     <script type="text/javascript" src="js/script.js"></script>
