--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <main>
             <div class="slogan">
                 <h1>Katarzyna Trześniewska</h1>
-                <h2 class="animated pulse">Front-end Developer</h2>
+                <h2 class="animated zoomIn">Front-end Developer</h2>
             </div>
         </main>
         <div class="scroll-down">
@@ -228,6 +228,7 @@
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
                             <i class="devicon-sass-original"></i>
+                            <i class="devicon-jquery-plain-wordmark"></i>
                             <i class="devicon-git-plain"></i>
                         </div>
                         <a href="https://katarzynka1234.github.io/Booking-form" target="_blank">
