Edit contat link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Katarzyna Trzesniewska</title>
+    <title>Katarzyna Trześniewska</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
@@ -308,7 +308,7 @@
                             <strong>e-mail</strong>: katarzynka.f@gmail.com</p>
                         <p>
                             <strong>tel.</strong> +48669380297</p>
-                        <a href="https://www.linkedin.com/in/katarzyna-trze%C5%9Bniewska-b71a80135/" target="_blank">
+                        <a href="https://www.linkedin.com/in/katarzynatrzesniewska/" target="_blank">
                             <button>
                                 <i class="fa fa-linkedin"></i>
                             </button>
@@ -335,9 +335,7 @@
     </footer>
 
 
-    <!-- Angular-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
-
+   
     <!-- jQuery -->
     <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
 
