--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
-                            <p>Projekt służący przećwiczeniu możliwości formularzy z użyciem popularnej biblioteki Bootstrap.
-                                Responsywny z walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass.
+                            <p>Projekt służący przećwiczeniu możliwości formularzy z użyciem Bootstrap oraz jQuery.
+                                Responsywny z bieżącą walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass.
                                 W projekcie prowadzony jest system kontroli wersji. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -275,7 +275,7 @@
                         <div class="description">
                             <h4>Kanban Board</h4>
                             <p>Aplikacja Kanban Board służy do zarządzania zadaniami i projektami. Projekt ten został zaprogramowany
-                                w ramach bootcampu. W projekcie jest użyty jQuery oraz jQueryUI. Wykonanie projektu pozwoliło
+                                w ramach bootcampu. W projekcie jest użyty jQuery oraz jQueryUI. Layout oraz grafika opracowana została samodzielnie.  Wykonanie projektu pozwoliło
                                 mi poznać podstawy działania komunikacji z serwerem za pomocą Ajax oraz API. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -304,6 +304,9 @@
             <div class="container">
                 <div class="contact-box">
                     <h2>Kontakt do mnie</h1>
+                        <p>
+                            <strong>www</strong>: trzesniewska.eu</p>
+                        <p>
                         <p>
                             <strong>e-mail</strong>: katarzynka.f@gmail.com</p>
                         <p>
