--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Katarzyna Trześniewska</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -221,9 +223,9 @@
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
-                            <p>Projekt służący przećwiczeniu możliwości formularzy z użyciem Bootstrap oraz jQuery.
-                                Responsywny z bieżącą walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass.
-                                W projekcie prowadzony jest system kontroli wersji. </p>
+                            <p>Projekt służący przećwiczeniu możliwości formularzy z użyciem Bootstrap oraz jQuery. Responsywny
+                                z bieżącą walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass. W projekcie
+                                prowadzony jest system kontroli wersji. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -275,8 +277,9 @@
                         <div class="description">
                             <h4>Kanban Board</h4>
                             <p>Aplikacja Kanban Board służy do zarządzania zadaniami i projektami. Projekt ten został zaprogramowany
-                                w ramach bootcampu. W projekcie jest użyty jQuery oraz jQueryUI. Layout oraz grafika opracowana została samodzielnie.  Wykonanie projektu pozwoliło
-                                mi poznać podstawy działania komunikacji z serwerem za pomocą Ajax oraz API. </p>
+                                w ramach bootcampu. W projekcie jest użyty jQuery oraz jQueryUI. Layout oraz grafika opracowana
+                                została samodzielnie. Wykonanie projektu pozwoliło mi poznać podstawy działania komunikacji
+                                z serwerem za pomocą Ajax oraz API. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -305,12 +308,15 @@
                 <div class="contact-box">
                     <h2>Kontakt do mnie</h1>
                         <p>
-                            <strong>www</strong>: trzesniewska.eu</p>
+                            <i class="fas fa-globe"></i> trzesniewska.eu
+                        </p>
                         <p>
+                            <i class="far fa-envelope"></i> katarzynka.f@gmail.com
+                        </p>
                         <p>
-                            <strong>e-mail</strong>: katarzynka.f@gmail.com</p>
-                        <p>
-                            <strong>tel.</strong> +48669380297</p>
+                            <i class="fas fa-phone"></i> +48 669380297
+                        </p>
+                        
                         <a href="https://www.linkedin.com/in/katarzynatrzesniewska/" target="_blank">
                             <button>
                                 <i class="fa fa-linkedin"></i>
@@ -338,7 +344,7 @@
     </footer>
 
 
-   
+
     <!-- jQuery -->
     <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
 
