Add en pl links

--- a/index-en.html
+++ b/index-en.html
@@ -45,8 +45,9 @@
                         </li>
                     </ul>
                 </div>
-            </div> 
-            <a href="index.html" class="change-language">PL</a>           
+            </div>
+            <a class="change-language en active" href="index-en.html">EN</a> 
+            <a href="index.html" class="change-language pl">PL</a>           
         </nav>        
         <main>
             <div class="slogan">
