--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             </div>
             
         </nav>
-        <a class="change-language" href="index-en.html">EN</a>
+        <a class="change-language en" href="index-en.html">EN</a>
+        <a class="change-language pl active" href="index.html">PL</a>
         <main>            
             <div class="slogan">
                 <h1>Katarzyna Trześniewska</h1>
