--- a/index-en.html
+++ b/index-en.html
@@ -18,7 +18,7 @@
     <header>
         <!-- Bootstrap menu - fixed to top -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                         aria-controls="navbar">
