Edit about section

--- a/index-en.html
+++ b/index-en.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -70,30 +70,30 @@
             <div class="about-text">
                 <p>My name is
                     <strong>Katarzyna Trześniewska</strong>. Economist by education, while
-                    <strong>Front-end Developer</strong> by passion. Fascinated with the visual possibilities of current web technologies.
-                    Fun of cross-country skiing and board games lover.
+                    <strong>Front-end Developer</strong> by passion. Fascinated with the <stron>visual</stron> possibilities of current <strong>web technologies</strong>.
+                    Fun of cross-country skiing and <strong>board games</strong> lover.
                 </p>
-                <p>Development in all areas of my life is a source of satisfaction for me. I’m aware that I still have a lot
-                    of learning to do, but that's gives me a lot of motivation to work.</p>
-                <p> Currently I live in Jelenia Gora. I would like to start as a Junior Front-end Developer.</p>
+                <p><strong>Development</strong> in all areas of my life is a source of satisfaction for me. I’m aware that I still have a lot
+                    of learning to do, but that's gives me a lot of <strong>motivation to work</strong>.</p>
+                <p> Currently I live in Jelenia Gora. I would like to start as a <strong>Junior Front-end Developer</strong>.</p>
             </div>
             <div class="about-text not-visible">
                 <br>
-                <p>A year ago I decided to change my career path towards IT. I decided to move to Front-end, because I'm sensitive
-                    to the aesthetics and graphic form of the content presented on the web. I also like to develop the visual
+                <p>A year ago I decided to change my career path towards <strong>IT</strong>. I decided to move to <strong>Front-end</strong>, because I'm sensitive
+                    to <strong>the aesthetics</strong> and <strong>graphic form</strong> of the content presented on the web. I also like to develop the visual
                     effects of my projects.</p>
-                <p>In May of this year I completed an intensive Front End Developer bootcamp in Kodilla, run by Codemy S.A.
-                    in Wrocław. This three-month online course gave me a solid basis and allowed me to learn the currently
-                    used web technologies. I like very much CSS3, which with Sass offers great opportunities for creating
-                    styles and animations. Learning JavaScript and jQuery opened me a Word of scripting languages, which
-                    inspired me a lot. I am going to explore it. I'm currently learn Angular.</p>
-                <p>I work also with: Visual Studio Code, version control system Git and NPM: task runner including creation
+                <p>In May of this year I completed an intensive <strong>Front End Developer bootcamp</strong> in Kodilla, run by Codemy S.A.
+                    in Wrocław. This three-month online course gave me a solid basis and allowed me to learn the <strong>currently</strong>
+                    used <strong>web technologies</strong>. I like very much <strong>CSS3</strong>, which with <strong>Sass</strong> offers great opportunities for creating
+                    styles and animations. Learning <strong>JavaScript</strong> and <strong>jQuery</strong> opened me a Word of <strong>scripting languages</strong>, which
+                    inspired me a lot. I am going to explore it. I'm currently learn <strong>Angular</strong>.</p>
+                <p>I work also with: <strong>Visual Studio Code</strong>, version control system <strong>Git</strong>,<strong>NPM</strong>: task runner including creation
                     of project structure, tests of code, compilation of SASS on CSS and adding necessary prefixes.</p>
-                <p>Programming has become one of my passions. Creating web applications and giving them beauty and the possibility
-                    to interact with the user get me a lot of fun. I always try to look for the solutions of the problems.
-                    This allows me to discover completely new possibilities and it gives me the greatest satisfaction.</p>
-                <p>Below I presented my projects. I still develop and improve them. I encourage you to see them. If you have
-                    any comments, please contact me!
+                <p><strong>Programming</strong> has become one of my passions. Creating <strong>web applications</strong> and giving them beauty and the possibility
+                    to <strong>interact</strong> with the user get me a lot of fun. I always try to <strong>look for the solutions</strong> of the problems.
+                    This allows me to discover completely new possibilities and it gives me the greatest <strong>satisfaction</strong>.</p>
+                <p>Below I presented my <strong>projects</strong>. I still <strong>develop and improve</strong> them. I encourage you to see them. If you have
+                    any comments, please <strong>contact me</strong>!
                 </p>
             </div>
             <button id="read_more">Read more</button>
