Test - correct error

--- a/index-en.html
+++ b/index-en.html
@@ -65,12 +65,12 @@
         <div class="about-box">
             <h2>About me</h2>
             <div class="picture">
-                <img src="images/about_me/mojePhoto.JPG">
+                <img src="images/about_me/mojePhoto.JPG" alt="Katarzyna Trześniewska-photo">
             </div>
             <div class="about-text">
                 <p>My name is
                     <strong>Katarzyna Trześniewska</strong>. Economist by education, while
-                    <strong>Front-end Developer</strong> by passion. Fascinated with the <stron>visual</stron> possibilities of current <strong>web technologies</strong>.
+                    <strong>Front-end Developer</strong> by passion. Fascinated with the <strong>visual</strong> possibilities of current <strong>web technologies</strong>.
                     Fun of cross-country skiing and <strong>board games</strong> lover.
                 </p>
                 <p><strong>Development</strong> in all areas of my life is a source of satisfaction for me. I’m aware that I still have a lot
@@ -105,34 +105,34 @@
     <section id="technology" class="technology">
         <h2>Used technologies</h2>
         <div id="usedTech" class="box-logo-1">
-            <div id="icon" class="box1 animated">
+            <div class="icon box1 animated">
                 <i class="devicon-html5-plain-wordmark"></i>
             </div>
-            <div id="icon" class="box2 animated">
+            <div class="icon box2 animated">
                 <i class="devicon-css3-plain-wordmark"></i>
             </div>
-            <div id="icon" class="box3 animated">
+            <div class="icon box3 animated">
                 <i class="devicon-javascript-plain"></i>
             </div>
-            <div id="icon" class="box4 animated">
+            <div class="icon box4 animated">
                 <i class="devicon-jquery-plain-wordmark"></i>
             </div>
-            <div id="icon" class="box5 animated">
+            <div class="icon box5 animated">
                 <i class="devicon-bootstrap-plain"></i>
             </div>
-            <div id="icon" class="box6 animated">
+            <div class="icon box6 animated">
                 <i class="devicon-sass-original"></i>
             </div>
-            <div id="icon" class="box7 animated">
+            <div class="icon box7 animated">
                 <i class="devicon-git-plain-wordmark"></i>
             </div>
         </div>
         <h3>Learning and introduce to projects:</h3>
         <div id="lernTech" class="box-logo-2">
-            <div id="icon2" class="box8 animated">
+            <div class="icon2 box8 animated">
                 <i class="devicon-angularjs-plain"></i>
             </div>
-            <div id="icon2" class="box9 animated">
+            <div class="icon2 box9 animated">
                 <i class="devicon-nodejs-plain"></i>
             </div>
         </div>
@@ -144,7 +144,7 @@
             <h2>My projects</h2>
             <div class="box-project">
                 <div class="project-1 project">
-                    <img src="images/projects/FlexboxRWD.png">
+                    <img src="images/projects/FlexboxRWD.png" alt="JPGtoHTML">
                     <div class="details">
                         <div class="description">
                             <h4>Slice JPG to HTML</h4>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="project-2 project">
-                    <img src="images/projects/PSDtoHTML.png">
+                    <img src="images/projects/PSDtoHTML.png" alt="PSDtoHTML">
                     <div class="details">
                         <div class="description">
                             <h4>Slice PSD to HTML</h4>
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <div class="project-3">
-                    <img src="images/projects/BookingForm1.png">
+                    <img src="images/projects/BookingForm1.png" alt="booking form">
                     <div class="details">
                         <div class="description">
                             <h4>Form reservation</h4>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="project-4">
-                    <img src="images/projects/Rock_Paper_Scissors.png">
+                    <img src="images/projects/Rock_Paper_Scissors.png" alt="Rock,Paper, Scissors">
                     <div class="details">
                         <div class="description">
                             <h4>Stone, Paper, Scissors</h4>
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="project-5">
-                    <img src="images/projects/KanbanBoard.png">
+                    <img src="images/projects/KanbanBoard.png" alt="Kanban Board">
                     <div class="details">
                         <div class="description">
                             <h4>Kanban Board</h4>
@@ -281,13 +281,14 @@
                     <div class="project-6"></div>
                 </div>
             </div>
+        </div>
     </section>
     <!-- FINISH PROJECTS SECTION -->
     <section id="contact" class="contact">
         <div>
             <div class="container">
                 <div class="contact-box">
-                    <h2>Contact</h1>
+                    <h2>Contact</h2>
                         <p>
                             <i class="fas fa-globe"></i> trzesniewska.eu
                         </p>
